Ejemplo de pseudoclases

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <h1 class="titulo_1">Bienvenido a mi primer proyecto web</h1>
                 <h1 id="nombre_id">Bienvenido a mi primer proyecto web</h1>
             </div>
-            <p>Lo que ves ahora es mi primer proyecto web en ella encontraras imagenes y videos divertidos  </p>
+            <p class="descripcion_sitio">Lo que ves ahora es mi primer proyecto web en ella encontraras imagenes y videos divertidos  </p>
             <p>Joaquin Vázquez</p>
         </section>
 
