--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
                 </video>
             </figure>
         </section>
+
+        <div>
+            <p>Soy un texto</p>
+        </div>
     </main>
 </body>
 </html>
