Organización de elementos mediante display, flex direction y align-items

--- a/index.html
+++ b/index.html
@@ -7,13 +7,11 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <main>
+    <main class="container">
         <!-- Seccion de bienvenida -->
         <section>
             <div class="nombre_clase">
                 <h1 class="titulo_1 font_sizeXL" >Bienvenido a mi primer proyecto web</h1>
-                <h1 class="titulo_1">Bienvenido a mi primer proyecto web</h1>
-                <h1 id="nombre_id">Bienvenido a mi primer proyecto web</h1>
             </div>
             <p class="descripcion_sitio">Lo que ves ahora es mi primer proyecto web en ella encontraras imagenes y videos divertidos  </p>
             <p>Joaquin Vázquez</p>
@@ -83,10 +81,6 @@
                 </video>
             </figure>
         </section>
-
-        <div>
-            <p>Soy un texto</p>
-        </div>
     </main>
 </body>
 </html>
