ajustando el texto

--- a/index.html
+++ b/index.html
@@ -5,13 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi primer HTML - Joaquin Vázquez</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <main class="container">
         <!-- Seccion de bienvenida -->
         <section>
             <div class="nombre_clase">
-                <h1 class="titulo_1 font_sizeXL" >Bienvenido a mi primer proyecto web</h1>
+                <h1 class="title" >Bienvenido a mi primer proyecto web</h1>
             </div>
             <p class="descripcion_sitio">Lo que ves ahora es mi primer proyecto web en ella encontraras imagenes y videos divertidos  </p>
             <p>Joaquin Vázquez</p>
@@ -19,7 +25,7 @@
 
         <!-- Sección de imagenes -->
         <section>
-            <h3>Imagenes divertidas</h3>
+            <h3 class="subtitle">Imagenes divertidas</h3>
 
             <figure>
                 <img src="./assets/dos_perritos.jpg" alt="" width="400px">
@@ -49,7 +55,7 @@
         
         <!-- Sección de videos -->
         <section>
-            <h3>Videos divertidos</h3>
+            <h3 class="subtitle">Videos divertidos</h3>
 
             <figure>
                 <video src="" controls preload="auto">
